cmake_minimum_required(VERSION 3.10)
project(functional)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -g")
enable_testing()

add_executable(function function.cc)
add_executable(bind_func bind_func.cc)
add_executable(bind_functor bind_functor.cc)
add_executable(bind_class_func bind_class_func.cc foo.h)
